--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,13 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>JavaScript Excel</title>
   </head>
   <body>
-    <div id="app" class="container"></div>
+    <div id="app"></div>
   </body>
 </html>
